[gd_scene load_steps=7 format=3 uid="uid://nwjvkualnd0m"]

[ext_resource type="Texture2D" uid="uid://d11vfswbnwfub" path="res://Assets/Potion Blue.png" id="1_btyj7"]
[ext_resource type="Script" uid="uid://cd1buuq5c27eo" path="res://Utilities/UI/ui.gd" id="1_dnxun"]
[ext_resource type="Texture2D" uid="uid://svdapisg7mpn" path="res://Assets/Potion Grey.png" id="2_dnxun"]
[ext_resource type="Texture2D" uid="uid://cg44nk4xnnyoi" path="res://Assets/Potion Green.png" id="3_0um31"]
[ext_resource type="Texture2D" uid="uid://uhnrxptepj8b" path="res://Assets/Heart Icon.png" id="4_jhukb"]
[ext_resource type="Texture2D" uid="uid://dep1gcw4endkl" path="res://Assets/Canon Icon.png" id="5_8kntt"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_dnxun")

[node name="TextureRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 992.0
offset_right = 1032.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0, 0.247059)

[node name="PotionSelectionContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 912.0
offset_right = 1152.0
offset_bottom = 80.0
theme_override_constants/separation = 0

[node name="PreviousPotion" type="TextureRect" parent="PotionSelectionContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("1_btyj7")
expand_mode = 1

[node name="ActualPotion" type="TextureRect" parent="PotionSelectionContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("2_dnxun")
expand_mode = 1

[node name="NextPotion" type="TextureRect" parent="PotionSelectionContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("3_0um31")
expand_mode = 1

[node name="HealthBar" type="Control" parent="."]
custom_minimum_size = Vector2(400, 80)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HeartTexture" type="TextureRect" parent="HealthBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_jhukb")
expand_mode = 1

[node name="BackgroundBar" type="ColorRect" parent="HealthBar"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 0
offset_left = 90.0
offset_top = 10.0
offset_right = 390.0
offset_bottom = 70.0
color = Color(0, 0, 0, 0.498039)

[node name="HPBar" type="ColorRect" parent="HealthBar"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 0
offset_left = 90.0
offset_top = 10.0
offset_right = 390.0
offset_bottom = 70.0
scale = Vector2(0.25, 1)
color = Color(1, 0.25098, 0.25098, 1)

[node name="RangeBar" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(400, 80)
anchors_preset = 0
offset_left = 400.0
offset_right = 800.0
offset_bottom = 80.0

[node name="RangeTexture" type="TextureRect" parent="RangeBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_8kntt")
expand_mode = 1

[node name="BackgroundBar" type="ColorRect" parent="RangeBar"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 0
offset_left = 90.0
offset_top = 10.0
offset_right = 390.0
offset_bottom = 70.0
color = Color(0, 0, 0, 0.498039)

[node name="RangeBar" type="ColorRect" parent="RangeBar"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 0
offset_left = 90.0
offset_top = 10.0
offset_right = 390.0
offset_bottom = 70.0
scale = Vector2(0.25, 1)
color = Color(0.6, 0.85098, 0.917647, 1)
